[package]
name = "blas-src"
version = "0.1.0"
authors = ["10x Genomics"]
license-file = "../LICENSE"
edition = "2021"
include = ["src/lib.rs"]

[target.'cfg(target_os = "macos")'.dependencies]
accelerate-src = "0.3.2"

[target.'cfg(not(target_os = "macos"))'.dependencies]
intel-mkl-src = { version = "0.7", default-features = false, features = [
    "download",
    "mkl-static-lp64-seq",
] }
