[package]
name = "blas-src"
version = "0.1.0"
authors = ["10x Genomics"]
license-file = "../LICENSE"
edition = "2021"
include = ["src/lib.rs"]

[target.'cfg(target_os = "macos")'.dependencies]
accelerate-src = "0.3.2"

[target.'cfg(not(target_os = "macos"))'.dependencies]
intel-mkl-src = { git = "https://github.com/10XGenomics/intel-mkl-src", branch = "master", features = [
    "mkl-static-lp64-seq",
] }
