[package]
name = "diff-exp"
version = "0.1.0"
authors = ["10x Genomics"]
license-file = "../LICENSE"
edition = "2021"

[dependencies]
anyhow = "1"
cephes = { path = "../cephes" }
scan-types = { path = "../scan-types" }
ndarray = { version = "0.15", features = ["rayon"] }
num-traits = "0.2"
noisy_float = "0.2"
sqz = { path = "../sqz" }
serde = { version = "1", features = ["derive"], optional = true }
snoop = { path = "../snoop" }

[dev-dependencies]
approx = "0.4"
assert_approx_eq = "*"
csv = "*"
flate2 = "*"
ndarray-npy = { version = "0.8", default-features = false, features = [
    "npz",
    "compressed_npz",
] }
ordered-float = ">=2, <4"
rand = "0.8"
rand_distr = "0.4"
rand_pcg = "0.3"
serde = { version = "*", features = ["derive"] }
serde_json = "1.0"


[features]
default = []
hdf5 = []
