[package]
name = "diff-exp"
version = "0.1.0"
authors = ["10x Genomics"]
license-file = "../LICENSE"
edition = "2021"

[dependencies]
anyhow = "1"
cephes = { path = "../cephes" }
scan-types = { path = "../scan-types" }
ndarray = { version = "0.16", features = ["rayon"] }
num-traits = "0.2"
noisy_float = "0.2"
sqz = { path = "../sqz" }
serde = { version = "1", features = ["derive"], optional = true }
snoop = { path = "../snoop" }

[dev-dependencies]
approx = "0.5"
assert_approx_eq = "*"
csv = "*"
flate2 = "*"
ndarray-npy = { version = "0.9", default-features = false, features = [
    "npz",
    "compressed_npz",
] }
ordered-float = ">=2, <5"
rand.workspace = true
serde = { version = "*", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
hdf5 = []
