[package]
name = "leiden"
version = "0.1.0"
authors = ["10x Genomics"]
license-file = "../LICENSE"
edition = "2021"
include = ["src/**/*", "LICENSE", "README.md"]

[dependencies]
fxhash = "0.2"
num-traits = "0.2"
rand = "0.8"
rand_chacha = "0.3"
rayon = "1"

[dev-dependencies]
flate2 = "1"
insta = "1.36"
