[package]
name = "scan-rs"
version = "0.1.0"
authors = ["10x Genomics"]
license-file = "../LICENSE"
edition = "2021"
include = ["src/**/*"]

[dependencies]
anyhow = "1"
blas-src = { path = "../blas-src" }
diff-exp = {path = "../diff-exp" }
log = "*"
num-traits = "0.2"
ndarray = { version = "0.15", features = ["rayon"] }
ndarray-linalg = "0.16"
ndarray-rand = "0.14"
ndarray-stats = "0.5"
noisy_float = "0.2"
rand = "0.8"
rand_distr = "0.4"
rand_pcg = "0.3"
sprs = { version = "0.11", default-features = false, features = ["multi_thread"] }
sqz = { path = "../sqz", features = ["blas"] }
scan-types = { path = "../scan-types" }
snoop = {path = "../snoop" }
ball-tree = { git = "https://github.com/10XGenomics/ball-tree.git", rev = "62fe538" }
# these should match ndarray-linalg versions
serde = { version = "*", features = ["derive"], optional = true }
flate2 = "*"

[dev-dependencies]
approx = "0.4"
assert_approx_eq = "*"
csv = "*"
flate2 = "*"
ndarray-npy = { version = "0.8", default-features = false, features = ["npz", "compressed_npz"] }
ordered-float = ">=2, <4"
serde = { version = "*", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
hdf5 = []
