[package]
name = "scan-rs"
version = "0.1.0"
authors = ["10x Genomics"]
license-file = "../LICENSE"
edition = "2021"
include = ["src/**/*"]

[dependencies]
anyhow = "1"
ball-tree = { git = "https://github.com/10XGenomics/ball-tree.git", rev = "62fe538" }
blas-src = { path = "../blas-src" }
diff-exp = { path = "../diff-exp" }
flate2 = "*"
log = "*"
ndarray = { version = "0.16", features = ["rayon"] }
ndarray-linalg = "0.17"
ndarray-stats = "0.6"
noisy_float = "0.2"
num-traits = "0.2"
rand.workspace = true
rand_distr = "0.5"
scan-types = { path = "../scan-types" }
serde = { version = "*", features = ["derive"], optional = true }
snoop = { path = "../snoop" }
sprs = { version = "0.11", default-features = false, features = [
    "multi_thread",
] }
sqz = { path = "../sqz", features = ["blas"] }

[dev-dependencies]
approx = "0.5"
assert_approx_eq = "*"
csv = "*"
flate2 = "*"
ndarray-npy = { version = "0.9", default-features = false, features = [
    "npz",
    "compressed_npz",
] }
ordered-float = ">=2, <5"
serde = { version = "*", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
hdf5 = []
