[package]
name = "sqz"
version = "0.1.0"
authors = ["10x Genomics"]
license-file = "../LICENSE"
edition = "2021"
include = ["src/**/*", "README.md"]

[dependencies]
anyhow = "1"
blas-src = { path = "../blas-src", optional = true }
itertools.workspace = true
log = "0.4"
multiversion = ">=0.7, <1"
ndarray = "0.16"
num-traits = "0.2"
rand.workspace = true
rayon = "1"
snoop = { path = "../snoop" }
sprs = { version = "0.11", default-features = false, features = [
    "multi_thread",
] }

[dev-dependencies]
approx = "0.5"
criterion = "0.5"
ndarray-stats = "0.6"
noisy_float = "0.2"
flate2 = "1"

[[bench]]
name = "my_benchmark"
harness = false

[features]
blas = ["dep:blas-src"]
