[package]
name = "umap-rs"
version = "0.1.0"
authors = ["10x Genomics"]
license-file = "../LICENSE"
edition = "2021"
include = ["src/**/*", "res/*", "README.md"]

[features]
default = []

[dependencies]
blas-src = { path = "../blas-src" }
log = "*"
ndarray = { version = "0.15", features = ["rayon", "approx-0_5"] }
ndarray-linalg = "0.16"
noisy_float = "0.2"
num-traits = "0.2"
plotly = { version = "*", default-features = false, optional = true }
rand = { version = "0.8" }
rand_pcg = "0.3"
rayon = "1"
simd_euclidean = { git = "https://github.com/lazear/simd-euclidean.git", rev = "7b456d5" }
sprs = { version = "0.11", default-features = false, features = [
    "multi_thread",
] }
vpsearch = "*"

[dev-dependencies]
byteorder = "*"
csv = "*"
flate2 = "*"
insta = "*"
itertools.workspace = true
ndarray-rand = "*"
ndarray-stats = "0.5"
rand_distr = "*"
serde = { version = "*", features = ["derive"] }
