[package]
name = "umap-rs"
version = "0.1.0"
authors = ["10x Genomics"]
license-file = "../LICENSE"
edition = "2021"
include = ["src/**/*", "res/*", "README.md"]

[features]
default = []

[dependencies]
blas-src = { path = "../blas-src" }
log = "0.4"
ndarray = { version = "0.16", features = ["rayon"] }
ndarray-linalg = "0.17"
noisy_float = "0.2"
num-traits = "0.2"
plotly = { version = ">=0.9, <0.13", default-features = false, optional = true }
rand.workspace = true
rayon = "1"
simd_euclidean = { git = "https://github.com/lazear/simd-euclidean", rev = "7b456d5" }
sprs = { version = "0.11", default-features = false, features = [
    "multi_thread",
] }
vpsearch = "2"

[dev-dependencies]
byteorder = "1"
csv = "1"
flate2 = "1"
insta = "1"
itertools.workspace = true
ndarray-stats = "0.6"
rand_distr = "0.5"
serde = { version = "1", features = ["derive"] }
